--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,3 +3,7 @@ application:
   web-config:
     port: 8080
     context-path: /
+  management:
+    endpoint:
+      enabled: false
+      path: /health
