Server events and clean up after run

--- a/src/main/resources/defaults.yml
+++ b/src/main/resources/defaults.yml
@@ -1,9 +1,9 @@
 application:
-  name: yawl-test
+  name: yawl application
   web-config:
     port: 8080
     context-path: /
   management:
     endpoint:
-      enabled: true
+      enabled: false
       path: /health
