moved completely away from bean registry

--- a/src/main/resources/defaults.yml
+++ b/src/main/resources/defaults.yml
@@ -7,6 +7,9 @@ application:
     config:
       port: 8080
       context-path: /
+      virtual-threads:
+        enabled: true
+        name: virtual-thread-
   management:
     endpoint:
       enabled: false
